--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
+
+# Datasets
+archive/
+Archive/
 *.spec
 
 # Installer logs
