--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Datasets
+archive/
+Archive/
+*.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -30,11 +35,6 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-
-# Datasets
-archive/
-Archive/
-*.spec
 
 # Installer logs
 pip-log.txt
