Upload Jupyter Notebook
Upload Jupyter Notebooks file of the data mining task of comparing LightGBM and XGBoost.

Co-Authored-By: Lin Meiru <110885390+RubyyyL1n@users.noreply.github.com>
Co-Authored-By: chengxianran <107105180+chengxianran@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@ archive/
 Archive/
 *.csv
 
+# Models Files
+models/
+Models/
+*.pkl
+
+# catboost info
+catboost_info/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
