Update main ipynb
1. Update part of interpretation for experiments results.
2.Update dataset description

Co-Authored-By: Nicholas1206 <151003200+Nicholas1206@users.noreply.github.com>
Co-Authored-By: JialeWan1020 <150887852+JialeWan1020@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ catboost_info/
 # Exampls Files
 examples/
 Examples/
+Examples
+examples
+example
+Example
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
